--- a/inventory/templates/UI/product_list.html
+++ b/inventory/templates/UI/product_list.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List - Inventory System</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/inventory/static/style.css">
 </head>
 <body>
+
+    
     <h1>Product List</h1>
     <table border="1">
         <thead>
