--- a/inventory/static/home.css
+++ b/inventory/static/home.css
@@ -129,6 +129,7 @@ body {
     align-items: center;
     font-size: 18px;
     margin-right: 20px;
+    font-style: italic;
 }
 
 /* Overview Section */
