--- a/inventory/static/home.css
+++ b/inventory/static/home.css
@@ -4,6 +4,12 @@ body {
     display: flex;
 }
 
+section {
+    height: 100vh;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
 .sidebar {
     width: 6%;
     background-color: #008163;
@@ -231,6 +237,65 @@ table th, table td {
 table th {
     background-color: #f4f4f4;
     text-align: left;
+}
+
+/* Products */
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+.product-card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 220px;
+    text-align: center;
+    transition: transform 0.3s;
+}
+.product-card:hover {
+    transform: translateY(-5px);
+}
+.product-card img {
+    width: 100%;
+    border-radius: 8px;
+}
+.product-card .product-info {
+    margin-top: 15px;
+}
+.product-card h3 {
+    font-size: 18px;
+    color: #333;
+    margin: 10px 0;
+}
+.product-card p {
+    font-size: 14px;
+    color: #666;
+}
+.product-card .price {
+    font-size: 16px;
+    color: #333;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.product-card .stock-status {
+    font-size: 14px;
+    font-weight: bold;
+}
+.product-card .in-stock {
+    color: green;
+}
+.product-card .low-stock {
+    color: red;
+}
+.back-link {
+    margin-top: 20px;
+    display: inline-block;
+    font-size: 16px;
+    text-decoration: none;
+    color: #007BFF;
 }
 
 /* Mobile View */
