--- a/inventory/templates/UI/edit_product.html
+++ b/inventory/templates/UI/edit_product.html
@@ -1,8 +1,20 @@
-<section>
-    <h1>Edit Product: {{ product.name }}</h1>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save Changes</button>
-    </form>
-</section>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'edit_product.css' %}">
+</head>
+<body>
+    <section>
+        <h1>Edit Product: {{ product.name }}</h1>
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Save Changes</button>
+        </form>
+    </section>
+</body>
+</html>
