--- a/inventory/static/home.css
+++ b/inventory/static/home.css
@@ -234,7 +234,7 @@ section {
 .products h1 {
     text-align: center;
     color: #000;
-    font-size: 28 px;
+    font-size: 48px;
 }
 
 .card-container {
@@ -282,7 +282,7 @@ section {
     font-weight: bold;
 }
 .product-card .in-stock {
-    color: green;
+    color: #008163;
 }
 .product-card .low-stock {
     color: red;
