--- a/inventory/templates/UI/home.html
+++ b/inventory/templates/UI/home.html
@@ -91,7 +91,7 @@
 
 
 <section class="products" id="products">
-    <h1>Product List</h1>
+    <h1>Products</h1>
     <div class="add-product">
         <a href="{% url 'add_product' %}" class="add-btn">Add   Product</a>
     </div>
