--- a/inventory/static/add_product.css
+++ b/inventory/static/add_product.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
+    background-color: #819791;
     color: #333;
 }
 
@@ -25,18 +25,21 @@ h1 {
 form {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 5px;
+    text-align: center;
+    font-weight: 600;
 }
 
 form input,
 form select{
-    width: 50%;
+    width: 95%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ddd;
     border-radius: 5px;
     background: #fdfdfd;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 form input:focus,
