--- a/inventory/static/home.css
+++ b/inventory/static/home.css
@@ -156,7 +156,7 @@ section {
 /* Overview Section */
 .overview {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-bottom: 20px;
 }
@@ -203,8 +203,8 @@ section {
 .charts-tables {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
     justify-content: space-between;
+    margin-left: 10%;
     margin-top: 30px;
 }
 
@@ -358,6 +358,44 @@ section {
     border-color: #fff;
 }
 
+.users {
+    width: 80%;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.users h1 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.users table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f4f4f4;
+}
+
+tr:hover {
+    background-color: #f1f1f1;
+}
+
+.users p {
+    text-align: center;
+    font-size: 1.2rem;
+}
 
 /* Mobile View */
 @media screen and (max-width: 768px) {
